<resources>
    <string name="app_name">SimaGrow</string>
    <string name="fondo">Fondo</string>
    <string name="logo">Logo</string>

    <string name="comunicado_oficial_del_centro">Comunicado Oficial del Centro</string>
    <string name="comunicadoOficial">El equipo directivo informa a toda la comunidad educativa que, con motivo de la jornada de puertas abiertas, el horario del próximo miércoles se verá modificado. Se ruega al alumnado y profesorado que consulten los cambios publicados en el tablón oficial y en la plataforma educativa.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="musica">Música</string>
    <string name="escuchar_musica">Escuchar música</string>
    <string name="no_escuchar_musica">No escuchar música</string>

    <string name="apariencia">Apariencia</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="desactivar_modo_oscuro">Desactivar modo oscuro</string>
    <string name="activar_modo_oscuro">Activar modo oscuro</string>

    <string name="idioma_app">Idioma de la aplicación</string>
    <string name="selecciona_idioma">Selecciona el idioma</string>

    <string name="informacion">Información</string>
    <string name="version">Versión</string>

    <string name="registrar">Registrar</string>
    <string name="simagrow_2026">SimaGrow - 2026</string>
    <string name="simagrow_2026_login">SimaGrow - 2026</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="volver">Volver</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nia">NIA</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="registro">Registro</string>
    <string name="simagrow">SimaGrow</string>
    <string name="versi_n_1_0_0">Versión 1.0.0</string>
    <string name="descripci_n">Descripción</string>
    <string name="simagrow_es_una_aplicaci_n_dise_ada_para_gestionar_incidencias_comunicaci_n_con_profesores_y_mejorar_la_organizaci_n_del_alumnado">SimaGrow es una aplicación diseñada para gestionar incidencias, comunicación con profesores y mejorar la organización del alumnado.</string>
    <string name="informaci_n_del_desarrollador">Información del desarrollador</string>
    <string name="desarrollado_por_alex_camu_as_mart_nez">Desarrollado por: Alex Camuñas Martínez</string>
    <string name="centro_ies_dr_llu_s_simarro">Centro: IES Dr. Lluís Simarro</string>
    <string name="tel_fono_46018692">Teléfono: 46018692</string>
    <string name="email_46018692_secretaria_edu_gva_es">Email: 46018692.secretaria@edu.gva.es</string>
    <string name="horarios">Horarios</string>
    <string name="matins_ndilluns_a_divendres_de_9_00h_a_14_00h_njuliol_i_setembre_ndilluns_a_divendres_de_9_00h_a_13_00h">Matins:\nDilluns a divendres de 9:00h a 14:00h\nJuliol i Setembre:\nDilluns a divendres de 9:00h a 13:00h</string>
    <string name="vesprades_ndel_15_d_octubre_fins_el_15_de_maig_ndijous_16_00_a_20_30_hores_njuny_a_setembre_tancat">Vesprades:\nDel 15 d\'octubre fins el 15 de maig\nDijous: 16:00 a 20:30 hores\nJuny a Setembre: Tancat</string>
    <string name="licencias_y_cr_ditos">Licencias y créditos</string>
    <string name="esta_aplicaci_n_utiliza_una_api_propia_desarrollada_por_el_equipo_del_proyecto_para_comunicarse_con_odoo_y_gestionar_los_datos_de_forma_segura">Esta aplicación utiliza una API propia desarrollada por el equipo del proyecto para comunicarse con Odoo y gestionar los datos de forma segura.</string>
    <string name="descripci_n_de_la_incidencia">Descripción de la incidencia</string>
    <string name="reportar">Reportar</string>
    <string name="descripci_nFormularioIncidencias">Descripción</string>
    <string name="zona">Zona</string>
    <string name="tipo">Tipo</string>
    <string name="t_tulo_de_la_incidencia">Título de la incidencia</string>
    <string name="t_tulo_de_la_incidenciaFormulario">Título de la incidencia</string>
    <string name="reportar_incidencia">Reportar Incidencia</string>
    <string name="enviar_mensaje_al_profesor">Enviar mensaje al profesor</string>
    <string name="profesor_nombre_o_email">Profesor (nombre o email)</string>
    <string name="asunto">Asunto</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="mensajes_de_soporte">Mensajes de soporte</string>
    <string name="mis_incidences">Mis Incidences</string>
    <string name="bienvenido_a_simagrow">Bienvenido a SimaGrow, %1$s</string>
    <string name="bienvenido_a_simagrow_alumno">Bienvenido a SimaGrow, Alumno</string>
    <string name="mensaje">Mensaje</string>
    <string name="formulario">Formulario</string>
    <string name="quieres_enviar_un_mensaje_a_tu_profesor">¿Quieres enviar un mensaje a tu profesor?</string>
    <string name="ir">Ir</string>
    <string name="crear_incidencia">crear incidencia</string>
    <string name="crear_incidencia_inicio">Crear incidencia</string>
    <string name="incidenciascontador">IncidenciasContador</string>
    <string name="incidencias_totales">Incidencias totales</string>
    <string name="numeroContador">0</string>
    <string name="noticias_del_instituto">Noticias del Instituto</string>
    <string name="mis_mensajes">Mis Mensajes</string>
    <string name="asunto_soporte">Asunto</string>
    <string name="escribe_tu_mensaje_soporte">Escribe tu mensaje</string>
    <string name="enviarSoporte">Enviar</string>
    <string name="descripci_n_breve_de_la_incidencia">Descripción breve de la incidencia...</string>
    <string name="pendiente">PENDIENTE</string>
    <string name="el_ctrico">ELÉCTRICO</string>
    <string name="_12_03_2026_10_30">12/03/2026 10:30</string>
    <string name="zona_aula_2b">Zona: Aula 2B</string>
    <string name="t_tulo_de_la_incidencia_item">Título de la Incidencia</string>
    <string name="asunto_item_mensaje">Asunto</string>
    <string name="profesor_alumno">Profesor / Alumno</string>
    <string name="fecha">Fecha</string>
    <string name="mensaje_item">Mensaje</string>
    <string name="descripci_n_corta_de_la_noticia">Descripción corta de la noticia…</string>
    <string name="llegir_m_s">Llegir més…</string>
    <string name="_27_de_febrer_de_2026">27 de febrer de 2026</string>
    <string name="t_tulo_de_la_noticia">Título de la noticia</string>
    <string name="imagen_noticia">Imagen noticia</string>
    <string name="alex_camu_as_mart_nez">Alex Camuñas Martínez</string>
    <string name="nia_12345678">NIA: 12345678</string>
    <string name="_2_dam">2 DAM</string>
    <string name="simagrow_toolbar">SimaGrow</string>
    <string name="ajustes">Ajustes</string>
    <string name="soporte">Soporte</string>
    <string name="acerca_de">Acerca de</string>
    <string name="otros">Otros</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="incidencias">Incidencias</string>
    <string name="mensajes">Mensajes</string>
    <string name="registrar_incidencia">Registrar Incidencia</string>
    <string name="incidenciasProfe">Incidencias</string>
    <string name="inicioProfe">Inicio</string>
    <string name="soporteNav">Soporte</string>

</resources>