<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgNoticia"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/fondo_tarjeta"
            android:contentDescription="@string/imagen_noticia"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/t_tulo_de_la_noticia"
                android:textColor="@color/texto_principal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_27_de_febrer_de_2026"
                android:textColor="@color/texto_noticia_secundario"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/descripci_n_corta_de_la_noticia"
                android:textColor="@color/texto_secundario"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLeerMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/llegir_m_s"
                android:textColor="@color/boton_principal"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>