<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/fondo_tarjeta"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asunto_item_mensaje"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/texto_principal"/>

        <TextView
            android:id="@+id/tvExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profesor_alumno"
            android:textSize="14sp"
            android:textColor="@color/texto_secundario"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="12sp"
            android:textColor="@color/texto_secundario"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/tvMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_item"
            android:textSize="16sp"
            android:textColor="@color/texto_principal"
            android:paddingTop="8dp"/>

        <ImageButton
            android:id="@+id/btnBorrar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/baseline_delete_24"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:padding="4dp"
            app:tint="@color/boton_principal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
