<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTituloSoporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Enviar mensaje a soporte"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/texto_principal"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAsuntoSoporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloSoporte">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAsuntoSoporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/asunto_soporte" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutMensajeSoporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutAsuntoSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMensajeSoporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="4"
            android:hint="@string/escribe_tu_mensaje_soporte"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnviarMensajeSoporte"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/enviarSoporte"
        android:backgroundTint="@color/boton_principal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutMensajeSoporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
